# Predictive-Quant-BTC-XGBoost

./: .gitignore  Dockerfile  LICENSE  README.md  comprehensive_optimization_results.json  comprehensive_optimization_test.py  create_xgboost_results_visualization.py  demo_large_dataset_system.py  demo_xgboost_system.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  run_comprehensive_optimization.py  simple_test.py  smart_optimization_demo.py  test_real_data.py
.github/workflows/: ci.yml
config/: settings.yaml
examples/: README.md  create_xgboost_results_visualization.py  demo_checkpoint_1.py
outputs/: README.md
src/: __init__.py
src/data/: __init__.py  multi_timeframe_collector.py
src/features/: __init__.py  feature_engine.py  technical_indicators.py
src/features/optimization/: __init__.py  comprehensive_hyperparameter_optimizer.py  feature_importance_filter.py  market_regime_detector.py  objective_functions.py  optimization_integration.py  parameter_spaces.py  smart_optimizer.py  walk_forward_analyzer.py
src/strategy/: __init__.py
src/utils/: config.py  diagnostic_visualizations.py  logging.py  visualizations.py
tests/: __init__.py  test_checkpoint_1.py  test_environment_setup.py  test_feature_engineering.py  test_real_data.py  test_smart_optimization.py
